--- a/css/style.css
+++ b/css/style.css
@@ -900,24 +900,23 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-left: 100px;
-      padding: 20px 40px;
-      font-size: 1.3rem; }
+      font-size: 1rem; }
     .menu ul {
       display: flex;
       margin-left: auto;
-      margin-right: 100px;
       list-style: none;
-      text-decoration: none; }
+      text-decoration: none;
+      align-items: center; }
     .menu li a {
       display: inline-block;
-      padding: 20px 40px;
-      font-size: 1.3rem;
-      color: white; }
+      padding: 15px 30px;
+      font-size: 1rem;
+      color: white;
+      text-decoration: none; }
     .menu a:hover {
       background-color: #df1a1a;
       border: 1px solid white;
-      padding: 19px 39px;
+      padding: 14px 29px;
       color: white;
       text-decoration: none; }
   .tituloMalala {
@@ -1005,7 +1004,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    color: #df1a1a; }
+    color: #df1a1a;
+    font-size: 0.8rem; }
   .headerGaleria .menu {
     display: flex;
     background-color: black;
@@ -1014,24 +1014,22 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-left: 100px;
-      padding: 20px 40px;
       font-size: 1.3rem; }
     .headerGaleria .menu ul {
       display: flex;
       margin-left: auto;
-      margin-right: 100px;
+      align-items: center;
       list-style: none;
       text-decoration: none; }
     .headerGaleria .menu li a {
       display: inline-block;
-      padding: 20px 40px;
-      font-size: 1.3rem;
+      padding: 15px 30px;
+      font-size: 1rem;
       color: white; }
     .headerGaleria .menu a:hover {
       background-color: #df1a1a;
       border: 1px solid white;
-      padding: 19px 39px;
+      padding: 14px 29px;
       color: white;
       text-decoration: none; }
   .tituloGaleria {
@@ -1124,31 +1122,29 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-left: 100px;
-      padding: 20px 40px;
       font-size: 1.3rem; }
     .headerInfo .menu ul {
       display: flex;
       margin-left: auto;
-      margin-right: 100px;
+      align-items: center;
       list-style: none;
       text-decoration: none; }
     .headerInfo .menu li a {
       display: inline-block;
-      padding: 20px 40px;
-      font-size: 1.3rem;
+      padding: 15px 30px;
+      font-size: 1rem;
       color: white; }
     .headerInfo .menu a:hover {
       background-color: #df1a1a;
       border: 1px solid white;
-      padding: 19px 39px;
+      padding: 14px 29px;
       color: white;
       text-decoration: none; }
   .titulo1 {
     position: relative;
     height: 300px;
     color: #141212;
-    margin-top: 30px;
+    margin-top: 50px;
     font-family: 'Bebas Neue', cursive;
     text-align: center; }
     .titulo1 h1 {
@@ -1179,9 +1175,10 @@
     border-radius: 1em;
     background-color: var(--blanco);
     box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent;
-    width: 70%;
+    width: 100%;
     height: 300px;
-    margin-left: 300px; }
+    margin-left: 10px;
+    margin-right: 20px; }
     .cajaInfo .tituloInfo {
       font-size: 30px;
       text-align: center;
@@ -1278,7 +1275,7 @@
     background-color: black; }
     .pie-pagina .grupo1 {
       width: 100%;
-      max-width: 1200px;
+      max-width: 1600px;
       margin: auto;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -1315,3 +1312,134 @@
       color: white; }
       .pie-pagina .grupo2 small {
         font-size: 15px; } }
+
+.body-reservar {
+  font-family: 'Roboto', sans-serif;
+  background: #E5E5E5; }
+
+.main-reservar {
+  max-width: 800px;
+  width: 90%;
+  margin: auto;
+  padding: 40px; }
+
+.formulario {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px; }
+
+.formulario__label {
+  display: block;
+  font-weight: 700;
+  padding: 10px;
+  cursor: pointer;
+  color: #0c0b0b; }
+
+.formulario__grupo-input {
+  position: relative; }
+
+.formulario__input {
+  width: 100%;
+  background: #fff;
+  border: 3px solid transparent;
+  border-radius: 3px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0 40px 0 10px;
+  transition: .3s ease all; }
+
+.formulario__input:focus {
+  border: 3px solid #1569d8;
+  outline: none;
+  box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4); }
+
+.formulario__input-error {
+  font-size: 12px;
+  margin-bottom: 0;
+  display: none; }
+
+.formulario__input-error-activo {
+  display: block; }
+
+.formulario__validacion-estado {
+  position: absolute;
+  right: 10px;
+  bottom: 15px;
+  z-index: 100;
+  font-size: 16px;
+  opacity: 0; }
+
+.formulario__checkbox {
+  margin-right: 10px; }
+
+.formulario__grupo-terminos,
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+  grid-column: span 2; }
+
+.formulario__mensaje {
+  height: 45px;
+  line-height: 45px;
+  background: #F66060;
+  padding: 0 15px;
+  border-radius: 3px;
+  display: none; }
+
+.formulario__mensaje-activo {
+  display: block; }
+
+.formulario__mensaje p {
+  margin: 0; }
+
+.formulario__grupo-btn-enviar {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.formulario__btn {
+  height: 45px;
+  line-height: 45px;
+  width: 30%;
+  background: #000;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: .1s ease all; }
+
+.formulario__btn:hover {
+  box-shadow: 3px 0px 30px #a3a3a3; }
+
+.formulario__mensaje-exito {
+  font-size: 14px;
+  color: #119200;
+  display: none; }
+
+.formulario__mensaje-exito-activo {
+  display: block; }
+
+/* ----- -----  Estilos para Validacion ----- ----- */
+.formulario__grupo-correcto .formulario__validacion-estado {
+  color: #1ed12d;
+  opacity: 1; }
+
+.formulario__grupo-incorrecto .formulario__label {
+  color: #bb2929; }
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+  color: #bb2929;
+  opacity: 1; }
+
+.formulario__grupo-incorrecto .formulario__input {
+  border: 3px solid #c02424; }
+
+@media screen and (max-width: 800px) {
+  .formulario {
+    grid-template-columns: 1fr; }
+  .formulario__grupo-terminos,
+  .formulario__mensaje,
+  .formulario__grupo-btn-enviar {
+    grid-column: 1; }
+  .formulario__btn {
+    width: 100%; } }
