--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -1340,7 +1340,7 @@
 //  menu 
    
     .menu{
-                
+      
                 display: flex;
                 background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
                 height: 150px;
@@ -1349,9 +1349,9 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    margin-left: 100px;
-                    padding: 20px 40px;
-                    font-size: 1.3rem;
+                    font-size: 1rem;
+                    
+                    
                    
 
 
@@ -1361,30 +1361,29 @@
                     
                     display: flex;
                     margin-left: auto;
-                    margin-right: 100px;
+                   
                     list-style: none;
                     text-decoration: none;
+                    align-items: center;
                   
                     
                 }
+               
                 li a{
                     
                     display: inline-block;
-                    padding: 20px 40px;
-                    font-size: 1.3rem;
-                    color: white
+                    padding: 15px 30px;
+                    font-size: 1rem;
+                    color: white;
+                    text-decoration: none;
                     
                     
                     
-                    
-                    
-                   
-
-                    }
+                     }
                 a:hover{
                     background-color: rgb(223, 26, 26);
                     border: 1px solid white;
-                    padding: 19px 39px;
+                    padding: 14px 29px;
                     color: white;
                     text-decoration: none;
                    
@@ -1509,7 +1508,8 @@
     flex-direction: row;
     align-items: center;
     justify-content:space-evenly;
-    color:rgb(223, 26, 26)
+    color:rgb(223, 26, 26);
+    font-size: 0.8rem;
    
 
 
@@ -1532,8 +1532,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-left: 100px;
-            padding: 20px 40px;
+           
+           
             font-size: 1.3rem;
 
 
@@ -1542,7 +1542,7 @@
             
             display: flex;
             margin-left: auto;
-            margin-right: 100px;
+            align-items: center;
             list-style: none;
             text-decoration: none;
           
@@ -1551,8 +1551,8 @@
         li a{
             
             display: inline-block;
-            padding: 20px 40px;
-            font-size: 1.3rem;
+            padding: 15px 30px;
+            font-size: 1rem;
             color: white
             
             
@@ -1565,7 +1565,7 @@
         a:hover{
             background-color: rgb(223, 26, 26);
             border: 1px solid white;
-            padding: 19px 39px;
+            padding: 14px 29px;
             color: white;
             text-decoration: none;
            
@@ -1682,8 +1682,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-left: 100px;
-            padding: 20px 40px;
+            
             font-size: 1.3rem;
 
 
@@ -1692,7 +1691,7 @@
             
             display: flex;
             margin-left: auto;
-            margin-right: 100px;
+            align-items: center;
             list-style: none;
             text-decoration: none;
           
@@ -1701,8 +1700,8 @@
         li a{
             
             display: inline-block;
-            padding: 20px 40px;
-            font-size: 1.3rem;
+            padding: 15px 30px;
+            font-size: 1rem;
             color: white
             
             
@@ -1715,7 +1714,7 @@
         a:hover{
             background-color: rgb(223, 26, 26);
             border: 1px solid white;
-            padding: 19px 39px;
+            padding: 14px 29px;
             color: white;
             text-decoration: none;
            
@@ -1729,7 +1728,7 @@
     position: relative;
     height: 300px;
     color: rgb(20, 18, 18);
-    margin-top: 30px;
+    margin-top: 50px;
     font-family: 'Bebas Neue', cursive;
     
     text-align: center;
@@ -1767,9 +1766,11 @@
 
 .cajaInfo{
     @include neo( 1 , 1em , 1em );
-    width: 70%;
+    width: 100%;
     height: 300px;
-    margin-left: 300px;
+    margin-left: 10px;
+    margin-right: 20px;
+    
     .tituloInfo{
         font-size: 30px;
         text-align: center;
@@ -1902,7 +1903,7 @@
     background-color: black;
     .grupo1{
         width: 100%;
-        max-width: 1200px;
+        max-width: 1600px;
         margin: auto;
         display: grid;
         grid-template-columns: repeat(3,1fr);
@@ -1978,6 +1979,7 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 20px;
+    
 }
 
 .formulario__label {
@@ -1985,10 +1987,12 @@
 	font-weight: 700;
 	padding: 10px;
 	cursor: pointer;
+    color: rgb(12, 11, 11);
 }
 
 .formulario__grupo-input {
 	position: relative;
+    
 }
 
 .formulario__input {
@@ -2003,7 +2007,7 @@
 }
 
 .formulario__input:focus {
-	border: 3px solid #0075FF;
+	border: 3px solid #1569d8;
 	outline: none;
 	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
 }
